--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "activityBar.background": "#392A2A",
         "titleBar.activeBackground": "#503A3B",
         "titleBar.activeForeground": "#FBFAFA"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
